--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="title_activity_inter_">LFC</string>
+    <string name="title_activity_inter_">LFC IYK</string>
     <string name="space">Space</string>
     <string name="announcement">Service Announcement</string>
     <string name="today">Today\'s Event</string>
